--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
@@ -35,4 +34,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.none {
+  list-style-type: none;
 }
